Remove perm gen settings as java 8 doesn't use them anymore
Related by the metastate (ohhhh spooky) the permanant generation does not exist
anymore and therefore the settings are superflous.