@@ -85,8 +85,6 @@ subprojects {
 
     tasks.withType(Test) {
         maxParallelForks = 2
-        // need more memory for unittests due to issue with Robolectric 1.3: https://github.com/robolectric/robolectric/issues/1700
-        jvmArgs '-XX:MaxPermSize=512m'
         testLogging {
             def buildNumber = "${System.env.BUILD_NUMBER}"
             def verboseLogging = buildNumber != null && !buildNumber.isEmpty() && buildNumber != "null"
